# TGC-ISS

./: .cproject  .envrc  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  Jenkinsfile  Modulefile  README.md  build.sh  conanfile.txt  generate.sh  run_riscv_tests.sh
.gitea/workflows/: interp_act.yaml  run_act.yaml
Debug/: offsets.txt  simplify_sail_trace.py  simplify_tgc_trace.py
cmake/: CodeGen.cmake
docs/: .gitignore
scripts/: annotate_addr_to_signature.py  create_reg_traces.py  makeJitOutputReadable.py  run_riscv_tests.sh
